# Kaggle-Playground-S3E16

./: pyproject.toml
reqs/: test.txt
src/kpe/: main.py  util.py
src/kpe/config/: __init__.py  config.yaml
src/kpe/data/: __init__.py  main.py  pipeline.py
src/kpe/data/features/: __init__.py  s3e16.py
src/kpe/data/post/: __init__.py
src/kpe/data/raw/: __init__.py
src/kpe/model/: __init__.py  main.py  opt.py
tests/: test_util.py
tests/config/: test_config.py
tests/data/features/: test_outliers.py
